--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "core-js": "^3.25.3",
+    "@nuxt/types": "^2.16.3",
+    "@nuxtjs/axios": "^5.13.6",
+    "ar.js": "^2.2.2",
+    "aws-sdk": "^2.1026.0",
+    "core-js": "^3.15.2",
+    "multer": "^1.4.3",
+    "multer-s3": "^2.9.0",
     "nuxt": "^2.15.8",
-    "vue": "^2.7.10",
+    "obj-file-parser": "^0.5.0",
+    "three": "^0.131.2",
+    "vue": "^2.6.14",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
     "vuetify": "^2.6.10"
