--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nuxt/types": "^2.16.3",
     "@nuxtjs/axios": "^5.13.6",
+    "aframe": "^1.4.2",
+    "aframe-ar": "^0.2.1-a",
     "ar.js": "^2.2.2",
     "aws-sdk": "^2.1026.0",
     "core-js": "^3.15.2",
@@ -19,7 +21,9 @@
     "multer-s3": "^2.9.0",
     "nuxt": "^2.15.8",
     "obj-file-parser": "^0.5.0",
-    "three": "^0.131.2",
+    "three": "^0.152.2",
+    "three-gltf-loader": "^1.111.0",
+    "three-obj-loader": "^1.1.3",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
