--- a/package.json
+++ b/package.json
@@ -15,15 +15,13 @@
     "aframe": "^1.4.2",
     "aframe-ar": "^0.2.1-a",
     "ar.js": "^2.2.2",
-    "aws-sdk": "^2.1026.0",
+    "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.15.2",
-    "multer": "^1.4.3",
-    "multer-s3": "^2.9.0",
+    "maz-ui": "^2.4.7",
     "nuxt": "^2.15.8",
     "obj-file-parser": "^0.5.0",
     "postprocessing": "^6.31.0",
     "three": "^0.152.2",
-    "three-gltf-loader": "^1.111.0",
     "three-obj-loader": "^1.1.3",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.7.10",
@@ -33,10 +31,7 @@
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3",
     "@vue/test-utils": "^1.3.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^29.1.2",
-    "jest": "^29.1.2",
-    "jest-environment-jsdom": "^29.1.2",
-    "vue-jest": "^3.0.4"
+    "babel-plugin-component": "^1.1.1",
+    "jest-environment-jsdom": "^29.1.2"
   }
 }
