--- a/package.json
+++ b/package.json
@@ -12,18 +12,17 @@
   "dependencies": {
     "@nuxt/types": "^2.16.3",
     "@nuxtjs/axios": "^5.13.6",
-    "aframe": "^1.4.2",
-    "aframe-ar": "^0.2.1-a",
-    "ar.js": "^2.2.2",
     "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.15.2",
     "maz-ui": "^2.4.7",
     "nuxt": "^2.15.8",
     "obj-file-parser": "^0.5.0",
     "postprocessing": "^6.31.0",
-    "three": "^0.152.2",
+    "swiper": "6.5.2",
+    "three": "0.125.0",
     "three-obj-loader": "^1.1.3",
     "vue": "^2.6.14",
+    "vue-awesome-swiper": "4.1.1",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
     "vuetify": "^2.6.10"
