--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@nuxt/types": "^2.16.3",
+    "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
     "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.15.2",
     "maz-ui": "^2.4.7",
     "nuxt": "^2.15.8",
     "postprocessing": "^6.31.0",
-    "swiper": "6.5.2",
+    "swiper": "5.2.0",
     "vue": "^2.6.14",
     "vue-awesome-swiper": "4.1.1",
     "vue-server-renderer": "^2.7.10",
