--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt --openssl-legacy-provider",
-    "build": "nuxt --openssl-legacy-provider build",
-    "start": "nuxt --openssl-legacy-provider start",
+    "dev": "nuxt ",
+    "build": "nuxt build",
+    "start": "nuxt start",
     "generate": "nuxt generate",
     "test": "jest"
   },
@@ -29,6 +29,7 @@
     "@nuxtjs/vuetify": "^1.12.3",
     "@vue/test-utils": "^1.3.0",
     "babel-plugin-component": "^1.1.1",
+    "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.1.2"
   }
 }
