--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3",
     "@vue/test-utils": "^1.3.0",
-    "babel-plugin-component": "^1.1.1",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.1.2"
+    "babel-plugin-component": "^1.1.1"
   }
 }
