--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "test": "jest"
+    "test": "echo 'No tests available'"
   },
   "dependencies": {
     "@nuxt/types": "^2.16.3",
